output.log
  File "bot.py", line 104
    await save_file.save(file_name)
    ^
SyntaxError: 'await' outside async function
Ignoring exception in on_message
Traceback (most recent call last):
  File "/home/finn/.local/lib/python3.7/site-packages/discord/client.py", line 312, in _run_event
    await coro(*args, **kwargs)
  File "bot.py", line 200, in on_message
    if json_message["external"]:
KeyError: 'external'
Ignoring exception in on_message
Traceback (most recent call last):
  File "/home/finn/.local/lib/python3.7/site-packages/discord/client.py", line 312, in _run_event
    await coro(*args, **kwargs)
  File "bot.py", line 200, in on_message
    if json_message["external"]:
KeyError: 'external'
Connected to Discord!
Connected to Discord!
[main 5dc6730] Removed an addon
 3 files changed, 2 insertions(+), 22 deletions(-)
To github.com:joshuaKnauber/serpens_addon_market.git
   4b4aa86..5dc6730  main -> main
[main 96db0cd] Updated or added an addon
 2 files changed, 25 insertions(+)
To github.com:joshuaKnauber/serpens_addon_market.git
   5dc6730..96db0cd  main -> main
